k8s/overlays/develop/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-app
spec:
  ingressClassName: public
#  rules:
#    - host: spring-dev.example.com
